# thesis_code

./: .gitignore  CMakeLists.txt  KLin_KP_A.cpp  KLin_KP_G.cpp  KLin_KP_GAP.cpp  KLin_KP_P.cpp  Klin_KP_GAP_UB.cpp  Makefile  README.md  abe_circuit_w_fanout.cpp  abe_circuit_w_fanout_GAP.cpp  abe_circuit_w_fanout_api.cpp  abe_circuit_w_fanout_api_and_pre.cpp  abe_circuit_w_fanout_base.cpp  abe_circuit_w_fanout_gopt.cpp  abe_circuit_w_fanout_oe.cpp  abe_circuit_w_fanout_ok.cpp  abe_circuit_w_fanout_old.cpp  abe_circuit_w_fanout_pre.cpp  alp_GAP_oe.cpp  alp_GAP_ok.cpp  alp_a_oe.cpp  alp_common.cpp  alp_g_oe.cpp  alp_naive.cpp  alp_p_oe.cpp  backup.sh  bench_.cpp  bench_add_operations.cpp  bench_defs.h  bench_mul_pre.cpp  bench_negations.cpp  bench_operations.cpp  bench_sim_vs_pre.cpp  bench_split_sim.cpp  benchmark_abe_circuit.sh  benchmark_alp.sh  benchmark_alp_GAP.sh  benchmark_alp_a_8_to_64.sh  benchmark_gpsw_lu.sh  (+37 more)
abe_circuit/: abe_circuit_w_fanout_api.cpp  abe_circuit_w_fanout_base.cpp
alp_scheme/: alp_GAP_oe.cpp  alp_GAP_ok.cpp  alp_a_oe.cpp  alp_common.cpp  alp_g_oe.cpp  alp_naive.cpp  alp_p_oe.cpp
bench_basics/: bench_TBE.cpp  bench_add_operations.cpp  bench_iter_map_vs_map_sim.cpp  bench_mul_opt.cpp  bench_mul_pre.cpp  bench_mulgen_mulfix.cpp  bench_negate_vs_inv.cpp  bench_negations.cpp  bench_operations.cpp  bench_sim_simlot.cpp  bench_sim_vs_pre.cpp  bench_simultaneous_stuff.cpp  bench_split_sim.cpp  bench_standard_tree.cpp  bench_tree_coeffs_vs_rand.cpp
gpsw/: gpsw_g_ok.cpp  gpsw_gap_od.cpp  gpsw_gap_ok.cpp
gpsw_lu/: gpsw_luRO_a_std.cpp  (+8 more)
objects/: main  (+2 more)
(+42 files in other folders)
